--- a/SoftwareUpdate/GUPdotNET_V2/src/libGUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET_V2/src/libGUPdotNET/app.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
 	<appSettings>
 		
 		<!-- For Debugging -->
-		<add key="Debug" value="true"/>
+		<add key="Debug" value="true" />
 		<!-- 
 			Used to override the version information 
 			Can be used for testing or if static numbers are prefered
@@ -13,7 +13,7 @@
 		<add key="MinorVersion" value="1" />
 		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="MonoBPMonitor"/>
+		<add key="ProgramName" value="MonoBPMonitor" />
 		<!-- The Generic Name/Title of the calling program -->
 		<add key="ProgramTitle" value="Mono Blood Pressure Monitor" />
 		
