--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -40,8 +40,10 @@
     <Reference Include="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Data">
+    </Reference>
+    <Reference Include="System.Xml">
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -61,6 +63,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connections\ConnectionDataTable.cs" />
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
@@ -68,8 +71,6 @@
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.QueryEditor.cs" />
     <Compile Include="Custom Controls\TabLabel.cs" />
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.TabLabel.cs" />
-    <Compile Include="Dialogs\NewConnection.cs" />
-    <Compile Include="gtk-gui\SQLiteMonoPlusUI.NewConnection.cs" />
     <Compile Include="Dialogs\frmDatabaseConnect.cs" />
     <Compile Include="frmMain.cs" />
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.frmDatabaseConnect.cs" />
