* Schema/View.cs: * Schema/ForeignKey.cs: * SQLiteMonoPlusUI.csproj: * Schema/ViewCollection.cs: * Schema/IndexCollection.cs: * Schema/ForeignKeyCollection.cs:

--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -88,6 +88,11 @@
     <Compile Include="Schema\Column.cs" />
     <Compile Include="Schema\ColumnCollection.cs" />
     <Compile Include="Schema\Index.cs" />
+    <Compile Include="Schema\ForeignKey.cs" />
+    <Compile Include="Schema\View.cs" />
+    <Compile Include="Schema\IndexCollection.cs" />
+    <Compile Include="Schema\ForeignKeyCollection.cs" />
+    <Compile Include="Schema\ViewCollection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
