* Common: * Common/Common.cs: * Common/BufferTags.cs: * SQLiteMonoPlusUI.csproj: * Common/EnviromentData.cs: * GlobalData/StoreModels.cs: * Connections/Connection.cs: * Connections/ConnectionStore.cs: * Connections/ConnectionComboBoxEntry.cs:

--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -93,6 +93,14 @@
     <Compile Include="Schema\IndexCollection.cs" />
     <Compile Include="Schema\ForeignKeyCollection.cs" />
     <Compile Include="Schema\ViewCollection.cs" />
+    <Compile Include="Connections\ConnectionComboBoxEntry.cs" />
+    <Compile Include="GlobalData\StoreModels.cs" />
+    <Compile Include="Common\BufferTags.cs" />
+    <Compile Include="Common\Common.cs" />
+    <Compile Include="Common\EnviromentData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
 </Project>
