--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -11,11 +11,19 @@
     <AssemblyName>SQLiteMonoPlusUI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <StartupObject>SQLiteMonoPlusUI.MainClass</StartupObject>
-    <ReferencePath>C:\Program Files\Mono-2.10.2\lib\mono\gac\</ReferencePath>
+    <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\ayork\Application Data\ICSharpCode/SharpDevelop4\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <SignAssembly>False</SignAssembly>
+    <DelaySign>False</DelaySign>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <NoStdLib>False</NoStdLib>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <RunCodeAnalysis>False</RunCodeAnalysis>
+    <RunSourceAnalysis>False</RunSourceAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugType>Full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG</DefineConstants>
@@ -31,7 +39,20 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <BaseAddress>4194304</BaseAddress>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <FileAlignment>4096</FileAlignment>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Data.SqliteClient">
+      <HintPath>dll\Mono.Data.SqliteClient.dll</HintPath>
+    </Reference>
     <Reference Include="System">
     </Reference>
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
@@ -45,7 +66,6 @@
     <Reference Include="System.Xml">
     </Reference>
     <Reference Include="Mono.Posix" />
-    <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -115,10 +135,12 @@
       <LastGenOutput>UserConfig.Designer.cs</LastGenOutput>
       <CustomToolNamespace>SQLiteMonoPlusUI</CustomToolNamespace>
     </None>
-    <None Include="dll\Mono.Data.Sqlite.dll" />
     <Content Include="dll\README_DLL.txt" />
     <Content Include="GlobalData\SQLiteMonoPlus.s3db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="dll\Mono.Data.SqliteClient.dll" />
+    <None Include="dll\sqlite3.def" />
+    <None Include="dll\sqlite3.dll" />
   </ItemGroup>
 </Project>
