--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -92,6 +92,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\UserConfig.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
